# sdl-degreeproject

./: Cargo.toml
src/: engine.rs  lib.rs  main.rs  networking.rs  pos.json  render.rs  worldstate.json
src/datatypes/: packet.rs  vector.rs
src/engine/: objects.rs  player.rs  render.rs
src/networking/: buffer.rs  client.rs  manager.rs  packet.rs  replication.rs  server.rs  stream.rs
