[package]
name = "sdl-degreeproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image","ttf"]
